src/test/compile-fail/spawn-non-nil-fn.rs
// error-pattern: mismatched types

fn f(x: int) -> int { ret x; }

fn main() { spawn f(10); }